# neura

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cpplint_errors.txt  example.py  my_computation_graph  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
bindings/: bindings.cpp
examples/: MNIST_classfication.ipynb
examples/.ipynb_checkpoints/: MNIST_classfication-checkpoint.ipynb
include/: device.h  dtype.h  helpers.h  indexing.h  init.h  tensor.h  utils.h
include/allocator/: allocator.h  allocatorFactory.h  cpuAllocator.h  cudaAllocator.h
include/engine/: ops.h
include/ops/: add.h  matmul.h  mul.h  ops.h  sub.h
python/core/: autograd.py  init.py  init_strategies.py  ops.py  tensor.py
python/nn/: __init__.py  batchNorm.py  bce.py  functional.py
python/optim/: __init__.py  adam.py
src/: __init__.py  tensor.cpp
src/allocator/: allocatorFactory.cpp
src/core/: __init__.py  autograd.py  init_strategies.py  ops.py  tensor.py
src/cuda/: CMakeLists.txt
src/cuda/core/: device.h  dtype.h  tensor.cpp  tensor.h
src/data/: dataloader.py  dataset.py
src/engine/: add.cpp  matmul.cpp  mul.cpp  sub.cpp
src/nn/: __init__.py  batchNorm.py  bce.py  conv.py  linear.py  module.py  relu.py
src/ops/: add.cpp  add.cu  matmul.cpp  matmul.cu  mul.cpp  mul.cu  ops.cpp  sub.cpp  sub.cu
src/optim/: adam.py  optimizer.py
tests/: test_tensor.py
tests/autograd/: test_autograd_engine.py
tests/data/: test_dataloader.py
tests/nn/: test_conv_modules.py  test_linear_module.py  test_norm_modules.py
(+16 files in other folders)
